book/tests/snapshots/snapshot__@internals__functional-lang-4.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter age > 50\nsort name\n"
input_file: book/tests/prql/internals/functional-lang-4.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

