book/tests/snapshots/snapshot__@internals__functional-lang-5.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees | filter age > 50 | sort name\n"
input_file: book/tests/prql/internals/functional-lang-5.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

