book/tests/snapshots/snapshot__@internals__functional-lang-6.prql.snap
---
source: book/tests/snapshot.rs
expression: "filter age > 50 (from employees) | sort name\n"
input_file: book/tests/prql/internals/functional-lang-6.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

