book/tests/snapshots/snapshot__@internals__functional-lang-7.prql.snap
---
source: book/tests/snapshot.rs
expression: "sort name (filter age > 50 (from employees))\n"
input_file: book/tests/prql/internals/functional-lang-7.prql
---
SELECT
  *
FROM
  employees
WHERE
  age > 50
ORDER BY
  name

