book/tests/snapshots/snapshot__@internals__name-resolving-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect first_name\n"
input_file: book/tests/prql/internals/name-resolving-0.prql
---
SELECT
  first_name
FROM
  employees

